# Binette

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  bin_refinement_dev.yaml  binette.yaml  binette_dev.yaml  class_index.html  d_0bf1b44744b37667___init___py.html  d_0bf1b44744b37667_bin_manager_py.html  d_0bf1b44744b37667_bin_quality_py.html  d_0bf1b44744b37667_binette_py.html  d_0bf1b44744b37667_cds_py.html  d_0bf1b44744b37667_contig_manager_py.html  d_0bf1b44744b37667_diamond_py.html  d_0bf1b44744b37667_io_manager_py.html  environment.yml  function_index.html  index.html  pyproject.toml  requirements.txt  setup.py  singularity_recipe  status.json  z_0bf1b44744b37667___init___py.html  z_0bf1b44744b37667_bin_manager_py.html  z_0bf1b44744b37667_bin_quality_py.html  z_0bf1b44744b37667_cds_py.html  z_0bf1b44744b37667_contig_manager_py.html  z_0bf1b44744b37667_diamond_py.html  z_0bf1b44744b37667_io_manager_py.html  z_0bf1b44744b37667_main_py.html
.github/workflows/: binette_ci.yml  black_lint.yml  build_draft_pdf.yml  check_conda_recipe.yml  mamba_install.yml  python-package.yml  release.yml
bin_refinement/: bin_manager.py  bin_manager_test.py  bin_quality.py  bin_refinement.py  cds.py  contig_manager.py  diamond.py  file_manager.py  metadata_tmp.py  test_selection_best.py  test_selection_create_graph.py
binder/: environment.yml  requirements.txt
binette/: __init__.py  bin_manager.py  bin_manager_test.py  bin_quality.py  bin_quality_test.py  binette.py  cds.py  contig_manager.py  diamond.py  io_manager.py  main.py  memory_control.py
docs/: conf.py  contributing.md  contribution.md  index.md  installation.md  tests.md  usage.md
paper/: paper.bib  paper.md
tests/: bin_manager_test.py  bin_quality_test.py  cds_test.py  contig_manager_test.py  contigs.fasta  diamonds_test.py  io_manager_test.py  main_binette_test.py
(+26 files in other folders)
